--- a/views/list_new.ejs
+++ b/views/list_new.ejs
@@ -38,38 +38,40 @@
 
  <!-- INPUT FORM BELOW -->
 
+ <div class="container custom-add-car-container">
   <form action="/inventory/list_new" method="POST">
     <div class="form-group column">
       <div class="mb-3 col-xs-3">
-        <input type="text" class="form-control" name="make" placeholder="Make">
+        <input type="text" class="form-control list-new-input" name="make" placeholder="Make">
       </div>
       <div class="mb-3">
-        <input type="text" class="form-control" name="model" placeholder="Model">
+        <input type="text" class="form-control list-new-input" name="model" placeholder="Model">
       </div>
       <div class="mb-3">
-        <input type="text" class="form-control" name="year" placeholder="Year">
+        <input type="text" class="form-control list-new-input" name="year" placeholder="Year">
       </div>
       <div class="mb-3">
-        <input type="text" class="form-control" name="color" placeholder="Color">
+        <input type="text" class="form-control list-new-input" name="color" placeholder="Color">
       </div>
       <div class="mb-3">
-        <input type="text" class="form-control" name="odometer" placeholder="Odometer">
+        <input type="text" class="form-control list-new-input" name="odometer" placeholder="Odometer">
       </div>
       <div class="mb-3">
-        <input type="text" class="form-control" name="price" placeholder="Price">
+        <input type="text" class="form-control list-new-input" name="price" placeholder="Price">
       </div>
       <div class="mb-3">
-        <input type="text" class="form-control" name="photo_1"  placeholder="Photo_1">
+        <input type="text" class="form-control list-new-input" name="photo_1"  placeholder="Photo_1">
       </div>
       <div class="mb-3">
-        <input type="text" class="form-control" name="photo_2"  placeholder="Photo_2">
+        <input type="text" class="form-control list-new-input" name="photo_2"  placeholder="Photo_2">
       </div>
       <div class="mb-3">
-        <input type="text" class="form-control" name="photo_3"  placeholder="Photo_3">
+        <input type="text" class="form-control list-new-input" name="photo_3"  placeholder="Photo_3">
       </div>
       <button type="submit" class="btn btn-danger btn-md">Add Vehicle</button>
     </div>
   </form>
+</div>
 
 
  <!-- INPUT FORM ABOVE-->
