--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -42,7 +42,7 @@
                 <tbody>
                   <tr>
                     <td>
-                      <select class="form-control" id="filterYear">
+                      <select class="form-control filter-line" id="filterYear">
                         <option value="">Year</option>
                         <% const uniqueYear=[]; %>
                           <% data.forEach((item)=> { %>
@@ -60,7 +60,7 @@
                   </tr>
                   <tr>
                     <td>
-                      <select class="form-control" id="filterMake">
+                      <select class="form-control filter-line" id="filterMake">
                         <option value="">Make</option>
                         <% const uniqueMake=[]; %>
                           <% data.forEach((item)=> { %>
@@ -78,7 +78,7 @@
                   </tr>
                   <tr>
                     <td>
-                      <select class="form-control" id="filterModel">
+                      <select class="form-control filter-line" id="filterModel">
                         <option value="">Model</option>
                         <% const uniqueModel=[]; %>
                           <% data.forEach((item)=> { %>
@@ -96,7 +96,7 @@
                   </tr>
                   <tr>
                     <td>
-                      <select class="form-control" id="filterPrice">
+                      <select class="form-control filter-line" id="filterPrice">
                         <option value="">Price</option>
                         <option value="10000 20000">$10,000 - $20,000</option>
                         <option value="20000 30000">$20,000 - $30,000</option>
@@ -118,13 +118,13 @@
 
               <button type="submit" class="btn btn-primary">Apply Filters</button>
             </form>
-            <a href="inventory/list_new"><button type="submit" class=" add-car-btn btn btn-success">Add Car</button></a>
+            <a href="inventory/list_new"><button type="submit" class=" add-car-btn btn btn-success">Add Vehicle</button></a>
           </div>
 
           <div class="col-md-9">
             <div class="row mb-4">
               <% data.forEach(item=> { %>
-                <div class="col-md-3">
+                <div class="col-md-3 vehicle-card">
                   <div class="card">
                     <a href="/sell/<%= item.id %>">
                       <% if (item.is_sold) { %>
